Compress file isn't working when Load UI is disabled #59175

Closed
opened 2018-12-11 10:39:22 +01:00 by Paul Szajner · 5 comments

System Information
Operating system: Linux
Graphics card: GeForce GTX 780/PCIe/SSE2'

Blender Version
Broken: blender2.8, commit date: 2018-12-10 23:13, hash: a49fdbcc67

Short description of error
In the user preferences when load UI is disabled and Compress File turned on, compress file isn't activated by default when saving files.

Exact steps for others to reproduce the error
Based on the default startup :

  • in the user preferences / Files , activate Compress File, and desactivate Load Ui.
  • Save preferences
  • Save the default scene, compress option should be enabled by default, this will give a 100ko file
  • close blender
  • open blender, load the previously saved file
  • save or save-as the file, compress option should be turned off, and saving should give a 610 Ko file

This option should have a similar behavior of relative path or load ui option,
What is set in the preferences should be the default when files are saved .

**System Information** Operating system: Linux Graphics card: GeForce GTX 780/PCIe/SSE2' **Blender Version** Broken: blender2.8, commit date: 2018-12-10 23:13, hash: a49fdbcc674 **Short description of error** In the user preferences when load UI is disabled and Compress File turned on, compress file isn't activated by default when saving files. **Exact steps for others to reproduce the error** Based on the default startup : - in the user preferences / Files , activate Compress File, and desactivate Load Ui. - Save preferences - Save the default scene, compress option should be enabled by default, this will give a 100ko file - close blender - open blender, load the previously saved file - save or save-as the file, compress option should be turned off, and saving should give a 610 Ko file This option should have a similar behavior of relative path or load ui option, What is set in the preferences should be the default when files are saved .
Author

Added subscriber: @sozap

Added subscriber: @sozap
Brecht Van Lommel was assigned by Sebastian Parborg 2019-01-23 15:39:32 +01:00
Brecht Van Lommel removed their assignment 2019-01-23 15:54:35 +01:00
Bastien Montagne was assigned by Brecht Van Lommel 2019-01-23 15:54:35 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by c26fe3433e

This issue was referenced by c26fe3433ef369aaf68b890ca3356b29fde19ec8

This issue was referenced by 7446c76187

This issue was referenced by 7446c76187778171a5f0e2949581c1b3e6918954

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59175
No description provided.